tests/sksl/errors/MeshVertexWithBlender.stage
### Compilation failed:

error: 12: effects are not permitted in mesh vertex shaders
uniform blender myBlender;
^^^^^^^^^^^^^^^^^^^^^^^^^
1 error
